--- a/ardusimple_rover/config/ardusimple.yaml
+++ b/ardusimple_rover/config/ardusimple.yaml
@@ -2,9 +2,9 @@ debug: 1                    # Range 0-4 (0 means no debug statements will print)
 
 device: /dev/ttyUSB0
 frame_id: gps #TODO: change it in the future
-config_on_startup: false
+config_on_startup: false	#DO NOT CHANGE OTHERWISE IT OVERWRITES THE MODULE CONFIGURATION
 uart1:
-  baudrate: 115200
+  baudrate: 38400
 rate: 1
 nav_rate: 1
 publish:
